# Proverka_FP

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
damage_bot/: __init__.py  config.py  db.py  fleet.py  handlers.py  keyboards.py  main.py  messages.py  reminders.py  repository.py
damage_bot/core/: __init__.py  buttons.py  classifier.py  constants.py  excel_paths.py  fp_schedule.py  managers.py  matching.py  parsers.py  plates.py  workflow.py
tests/: __init__.py  test_core.py  test_keyboards.py
